# guilder

./: .dockerignore  .drone.yml  .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  docker-compose.production.yaml  docker-compose.yaml
data_sources/pkobp/: Cargo.toml
data_sources/pkobp/examples/: account.rs
data_sources/pkobp/src/: account.rs  lib.rs  structs.rs
data_sources/trading-view/: Cargo.toml  README.md
data_sources/trading-view/examples/: manager.rs  observe.rs  search.rs
data_sources/trading-view/src/: client.rs  commands.rs  connection.rs  lib.rs  ticker.rs
data_sources/trading-view/tests/: commands_test.rs  response_test.rs  search_result_test.rs  ticker_test.rs
data_sources/trading-view/tests/fixtures/: fields.json  symbol_resolved.json  timescale_update.json
data_sources/trading-view/tests/fixtures/qsd/: ch.json  meta.json
entity/: Cargo.toml
entity/src/: accounts.rs  accounts_metadata.rs  asset_performances.rs  assets.rs  bond_balance_performances.rs  bond_monthly_performances.rs  bond_performances.rs  bond_period.rs  bonds.rs  categories.rs  comments.rs  exchange_rates.rs  import.rs  integrations.rs  interest_rate_histories.rs  lib.rs  points.rs  user.rs  wallets.rs  wallets_metadata.rs
frontend/: package.json  tsconfig.json
frontend/scripts/: build.js
frontend/src/: index.tsx  routes.tsx  theme.less  toasts.tsx
migration/: Cargo.toml
migration/sql/: create_points_bond.sql  create_points_constraints.sql  create_view_asset_stats.sql  create_view_bond_performances.sql  daily_change_percent.sql  high_low_score.sql  price_difference.sql  update_view_asset_stats.sql  ytd.sql
migration/src/: lib.rs  m20220099_000000_create_change_func.rs  m20220100_000001_create_helper_functions.rs  m20220100_000002_create_score_function.rs  m20220100_000003_create_ytd_function.rs  m20220101_000002_create_users_table.rs  m20220101_000003_create_assets_table.rs  m20220101_000004_add_metadata_to_assets.rs  m20220101_000006_create_points.rs  m20220101_000007_create_points_upsert_index.rs  m20220101_000007_create_view.rs  m20220513_140521_update_asset_stats.rs  m20220519_095224_create_comments.rs  m20220519_100706_create_comments_index.rs  m20220523_124816_create_categories.rs  m20220525_101158_add_category_id_to_assets.rs  m20220530_102824_create_accounts.rs  m20220603_140834_create_integrations.rs  m20220606_201044_create_bonds.rs  m20220607_192843_create_fk_assets_points.rs  m20220608_185348_create_fk_bonds_points.rs  m20220608_190440_create_bond_performances.rs  m20220619_104537_drop_comments_foregin.rs  m20220620_130526_create_interest_rate_history_view.rs  m20220620_154636_update_daily_change_procedure.rs  m20220621_185134_add_periods_to_bonds.rs  m20220622_185853_create_bonds_monthly_performance.rs  m20220624_185902_update_bond_month_performance.rs  m20220624_190452_create_bond_balance_performances.rs  m20220630_191253_update_bond_performances.rs  m20220630_194402_update_bond_balance_performances.rs  m20220704_183106_create_wallets.rs  m20220706_202701_add_wallet_to_bonds.rs  m20220712_093742_bond_balances_view_archived.rs  m20220712_194828_add_kind_to_assets.rs  m20220713_191822_create_exchange_rates_view.rs  m20220714_190556_create_accounts_with_balances_view.rs  m20220716_091349_create_wallets_metadata.rs  main.rs  view.rs
src/: env.rs  main.rs  secure.rs  test.rs  utils.rs
src/cli/: commands.rs  mod.rs
src/services/: exchange_rates.rs  mod.rs  new_user.rs
src/specs/: mod.rs
src/stages/: db.rs  events.rs  exchange_rate.rs  jobs.rs  mod.rs  pkobp_integration.rs  (+2 more)
(+206 files in other folders)
