[workspace]
members = [
  ".",
  "migration",
  "entity",
  "data_sources/trading-view",
  "data_sources/pkobp",
]

[package]
name = "guilder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.2"
rust_decimal = "1.24"
rust_decimal_macros = "1.24"
rusty-money = { features=["iso", "crypto"], version = "0.4.1" }
tokio-cron-scheduler = "0.7.0"
trading-view = { path = "data_sources/trading-view" }
pkobp = { path = "data_sources/pkobp" }
entity = { path = "entity" }
migration = { path = "migration" }
async-trait = { version = "0.1" }
clap = { version = "3.1.6", features = ["derive"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.11", features = ["tracing-log"] }
tracing = "0.1.34"
tokio = { version = "1.17.0", features = ["full"] }
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json", "tls"] }
sea-orm-rocket = "0.5.0"
anyhow = { version = "1.0.56", features = ["backtrace"] }
rust-crypto = "^0.2.36"
serde = "1.0.136"
serde_json = "1.0.79"
chrono = "0.4.19"
voca_rs = "1.14.0"
lazy_static = "^1"
validator = { version = "0.15", features = ["derive"] }

[dev-dependencies]
hex-literal = "0.3.4"
url = "2.2.2"
rstest = "0.12.0"
