[package]
name = "pkobp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto= "^0.2"
chronoutil = "0.2.3"
tokio = { version = "1.17.0", features = ["full"] }
once_cell = "1.5"
thirtyfour = "0.29.1"
tracing = "0.1"
regex = "1.5"
chrono = "0.4.19"
itertools = "0.10.2"
rusty-money = { features=["iso", "crypto"], version = "0.4.1" }
rust_decimal = "1.24"
rust_decimal_macros = "1.24"
anyhow = { version = "1.0.56", features = ["backtrace"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.7", features = ["tracing-log"] }
tokio-test = "0.4.2"
dotenv = "0.15.0"
