[package]
name = "trading-view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
tokio = { version = "1.17.0", features = ["full"] }
tungstenite = { version = "0.17.2", features = ["native-tls"] }
anyhow = "1.0.53"
url = "2.2.2"
futures-util = "0.3.21"
regex = "1"
once_cell = "1.5"
tracing = "0.1"
serde_json = "1.0"
serde = { version = "1.0.136", features = ["derive"] }
rand = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
voca_rs = "1.14.0"
[[example]]
name = "observe"
[[example]]
name = "search"

[dev-dependencies]
tracing-subscriber = { version = "0.3.7", features = ["tracing-log"] }
tokio-test = "0.4.2"
